<resources>
    <string name="app_name">Soccer Team</string>
    <string name="location">Jakarta, Indonesia</string>
    <string name="name">Arsenal FC</string>
    <string name="image_description">Image description</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="navigation_drawer_open">Menu Open</string>
    <string name="navigation_drawer_close">Menu Close</string>
    <string name="text_description">text description</string>
    <string name="title_favorite">Favorite</string>
    <string name="arsenal">Arsenal</string>
    <string name="search_team">Team Search</string>
    <string name="nothing">Data Not Found!</string>
    <string name="menu_search">Team Search</string>
    <string name="team_name">Enter team name</string>
    <string name="league">English Premier League</string>
    <string name="contentDescription">konten gambar</string>
    <string name="description">Description</string>
    <string name="badge">Badge</string>
    <string name="jersey">Jersey</string>
</resources>